data/derived/comb/progs/unify/prog5184.ml.out
Characters 59-68:
  | n -> x::clone (x (n-1));;
                  ^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         int -> 'a
       The type variable 'a occurs inside int -> 'a
